test/e2e/chainsaw/common/_step_templates/apply-assert-gateway-tls-terminate-listener.yaml
# Template for creating and asserting a Gateway with a TLS terminatre (L4) listener.
#
# Required bindings:
#   - gateway_name: Name of the gateway to create.
#   - test_name: Test name used to compose the gateway class name.
#   - namespace: Namespace where the gateway will be created.
#   - listener_tls_port: TLS listener port (e.g., "8899").
#   - sni_hostname: SNI hostname for the TLS listener (e.g., "*.example.com").
#   - cert_secret_name: Name of the TLS secret.
#   - cert_secret_namespace: Namespace of the TLS secret.
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: apply-assert-gateway-tls-terminate-listener
spec:
  try:
    - apply:
        resource:
          apiVersion: gateway.networking.k8s.io/v1
          kind: Gateway
          metadata:
            name: ($gateway_name)
            namespace: ($namespace)
          spec:
            gatewayClassName: (join('-', [($test_name), 'gateway-class']))
            listeners:
            - name: tls-passthrough
              protocol: TLS
              port: (to_number($listener_tls_port))
              hostname: ($sni_hostname)
              tls:
                mode: Terminate
                certificateRefs:
                - name: ($cert_secret_name)
                  namespace: ($cert_secret_namespace)

    - assert:
        resource:
          apiVersion: gateway.networking.k8s.io/v1
          kind: Gateway
          metadata:
            name: ($gateway_name)
            namespace: ($namespace)
          status:
            (conditions[?type == 'Accepted']):
              - status: 'True'
                reason: Accepted
            (conditions[?type == 'Programmed']):
              - status: 'True'
                reason: Programmed
            (conditions[?type == 'DataPlaneReady']):
              - status: 'True'
                reason: Ready
            (conditions[?type == 'KonnectGatewayControlPlaneProgrammed']):
              - status: 'True'
                reason: Programmed
            (conditions[?type == 'KonnectExtensionReady']):
              - status: 'True'
                reason: Ready
            (conditions[?type == 'GatewayService']):
              - status: 'True'
                reason: Ready
